# fusain

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Kconfig  LICENSE.md  README.md  Taskfile.dist.yml  requirements.txt  west.yml
.github/workflows/: ci.yml  validate-cddl.yml
cmake/: fusainConfig.cmake.in
git-hooks/: README.md  pre-commit
include/fusain/: fusain.h
include/helios_serial/: helios_serial.h
src/: fusain.c  fusain_net_buf.c  helios_serial.c
tests/: CMakeLists.txt  Kconfig  README.md  coverage.conf  prj.conf  testcase.yaml
tests/src/: main.c  test_crc.c  test_decoding.c  test_encoding.c  test_fuzz.c  test_net_buf.c  test_packet_creation.c
tests/standalone/: CMakeLists.txt  main.c
tests/standalone/zephyr/: ztest.h
tests/standalone/zephyr/random/: random.h
zephyr/: module.yml
